# movie-rating-system

./: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  seeddb.sql
alembic/: env.py
alembic/versions/: cba5c34eb185_init_schema.py
app/: logging_config.py  main.py
app/controller/: genre_controller.py  movie_controller.py
app/db/: config.py  deps.py  session.py
app/models/: __init__.py  director.py  genre.py  genres_movie.py  movie.py  movie_rating.py
app/repositories/: genre_repository.py  movie_repository.py  rating_repository.py
app/schemas/: movie.py  rating.py
app/services/: genre_service.py  movie_service.py  rating_service.py
scripts/: db_check.py  seed_min.py  seeddb.sql
