[tool.poetry]
name = "movie-rating-system"
version = "0.1.0"
description = ""
authors = ["Nasim Koohestani <nasimkoohestani82@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = ">=0.127.0,<0.128.0"
uvicorn = ">=0.40.0,<0.41.0"
sqlalchemy = ">=2.0.45,<3.0.0"
alembic = ">=1.17.2,<2.0.0"
psycopg2-binary = ">=2.9.11,<3.0.0"
python-dotenv = ">=1.2.1,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
